Thu Feb 05 16:07:46 UTC 2009  Marcel Smit  <msmit@remedy.nl>

      * tao/ZIOP/ZIOP.cpp:
      * tao/ZIOP/ZIOP.h:
        Rewritten compression function to prevent double
        code
      
      * tao/ZIOP_Adapter.h:
        Name change (stream into cdr)

Thu Feb 05 14:09:46 UTC 2009  Marcel Smit  <msmit@remedy.nl>

      * tao/GIOP_Message_Base.cpp:
        Completed the circle. Reply data from a server gets decompressed 
        when received by a client.

Thu Feb 05 13:53:46 UTC 2009  Marcel Smit  <msmit@remedy.nl>

      * tao/GIOP_Message_Base.cpp:
        Fixed logging error.
      
      * tao/IIOP_Transport.cpp:
      * tao/PortableServer/Upcall_Wrapper.cpp:
        Move compression of reply message from Upcall_Wrapper.cpp
        to IIOP_Transport.cpp.
      
      * tao/ZIOP/ZIOP.cpp:
        Fixed errors during decompression. 
        Changed marshal reply data. Marshalling of arguments
        isn't necessary anymore; just compress everything after
        the header.
        For decompress and compress, set TAO_GIOP_MESSAGE_SIZE_OFFSET 
        in order to represent the correct number of bytes.

      * tao/ZIOP/ZIOP.h:
      * tao/ZIOP_Adapter.h:
        Changed function of marshal_reply_data.
        Only TAO_OutputCDR and TAO_ORB_Core are needed here.

Tue Feb 03 12:42:46 UTC 2009  Marcel Smit  <msmit@remedy.nl>

      * tao/GIOP_Message_Base.cpp
        Decompress input changed from TAO_ServerRequest to TAO_InputCDR.
        Added log info after decompression. The user is able to view the
        decompressed data.
        Indication whether it's a GIOP or a ZIOP message in dump_msg.
      
      * tao/Synch_Invocation.cpp
        Added log info before compression. The user is able to 
        view the data before it is compressed.
        
      * tao/ZIOP/ZIOP.cpp
        Decompress input changed from TAO_ServerRequest to TAO_InputCDR.
        Also change header into ZIOP message after compression.