@@ -87,9 +87,7 @@ TAO_GIOP_Message_State::parse_message_header_i (ACE_Message_Block &incoming)
 int
 TAO_GIOP_Message_State::parse_magic_bytes (char *buf)
 {
-#if defined (TAO_HAS_ZIOP) && TAO_HAS_ZIOP ==1
-  // The values are hard-coded to support non-ASCII platforms.
-  if (!(buf [0] == 0x5A      // 'Z'
+  if (!((buf [0] == 0x5A || buf [0] == 0x47)     // 'Z' or 'G' (depending on compression)
         && buf [1] == 0x49   // 'I'
         && buf [2] == 0x4f   // 'O'
         && buf [3] == 0x50)) // 'P'
@@ -98,35 +96,15 @@ TAO_GIOP_Message_State::parse_magic_bytes (char *buf)
         ACE_DEBUG ((LM_DEBUG,
                     ACE_TEXT ("TAO (%P|%t) - ")
                     ACE_TEXT ("TAO_GIOP_Message_State::parse_magic_bytes, ")
-                    ACE_TEXT ("bad ZIOP header: ")
+                    ACE_TEXT ("bad %cIOP header: ")
                     ACE_TEXT ("magic word [%02x,%02x,%02x,%02x]\n"),
+                    buf[0],
                     buf[0],
                     buf[1],
                     buf[2],
                     buf[3]));
       return -1;
     }
-#else
-  // The values are hard-coded to support non-ASCII platforms.
-  if (!(buf [0] == 0x47      // 'G'
-        && buf [1] == 0x49   // 'I'
-        && buf [2] == 0x4f   // 'O'
-        && buf [3] == 0x50)) // 'P'
-    {
-      if (TAO_debug_level > 0)
-        ACE_DEBUG ((LM_DEBUG,
-                    ACE_TEXT ("TAO (%P|%t) - ")
-                    ACE_TEXT ("TAO_GIOP_Message_State::parse_magic_bytes, ")
-                    ACE_TEXT ("bad GIOP header: ")
-                    ACE_TEXT ("magic word [%02x,%02x,%02x,%02x]\n"),
-                    buf[0],
-                    buf[1],
-                    buf[2],
-                    buf[3]));
-      return -1;
-    }
-#endif
-
  return 0;
 }
 
